--- a/pgd -logistics/pgd -logistics/pgd Logistics/logistics-index.html
+++ b/pgd -logistics/pgd -logistics/pgd Logistics/logistics-index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logistics & Supply Chain Management</title>
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -1069,7 +1068,7 @@
         <div class="apply-section ibf-apply-section">
             <div class="container">
                 <div class="apply-row">
-                    <h2 class="apply-section-title"><a href="#">Be part of Our Professional Family.</a></h2>
+                    <h2 class="apply-section-title"><a href="#">Be a part of Our Professional Family.</a></h2>
                     <h2 class="apply-section-title"><a href="#">Always be in Care.</a></h2>
                     <a href="#" class="apply-btn">Apply Now</a>
                 </div>
